kubernetes/apps/keyb/prod/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keyb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        nfsMount: "true"
    spec:
      containers:
        - name: keycloak
          image: ghcr.io/keybio/keycloak/app:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
