kubernetes/apps/keyb/prod/keycloak/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-service
spec:
  selector:
    app: keycloak
  type:  ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
